crates/fcp-audit/tests/snapshots/golden_receipts__audit_entry_full.snap
---
source: crates/fcp-audit/tests/golden_receipts.rs
assertion_line: 187
expression: entry
---
{
  "id": "entry-full-0042",
  "event_type": "secret.access",
  "severity": "warning",
  "actor": "agent:service-account@example.com",
  "zone_id": "z:prod",
  "seq": 42,
  "occurred_at": 1700003600,
  "hlc": {
    "physical_ms": 1700003600000,
    "logical": 0,
    "node_id": "agent:service-account@example.com"
  },
  "prev": "entry-full-0041",
  "correlation_id": "req-abc-123",
  "trace_context": {
    "trace_id": "0af7651916cd43dd8448eb211c80319c",
    "span_id": "b7ad6b7169203331",
    "flags": 0
  },
  "connector_id": "stripe",
  "operation_id": "charges.create",
  "metadata": {
    "amount_cents": 4200,
    "currency": "USD",
    "masked_card": "****4242"
  }
}
