crates/fcp-audit/tests/snapshots/golden_receipts__audit_entry_genesis.snap
---
source: crates/fcp-audit/tests/golden_receipts.rs
assertion_line: 207
expression: entry
---
{
  "id": "entry-genesis",
  "event_type": "chain.bootstrap",
  "severity": "info",
  "actor": "host:fcp-mesh",
  "zone_id": "z:genesis",
  "seq": 0,
  "occurred_at": 1700000000,
  "hlc": {
    "physical_ms": 1700000000000,
    "logical": 0,
    "node_id": "host:fcp-mesh"
  }
}
