crates/fcp-audit/tests/snapshots/golden_receipts__audit_entry_minimal.snap
---
source: crates/fcp-audit/tests/golden_receipts.rs
assertion_line: 158
expression: entry
---
{
  "id": "entry-min-0001",
  "event_type": "capability.invoke",
  "severity": "info",
  "actor": "agent:local",
  "zone_id": "z:work",
  "seq": 0,
  "occurred_at": 1700000000,
  "hlc": {
    "physical_ms": 1700000000000,
    "logical": 0,
    "node_id": "agent:local"
  }
}
