crates/fcp-audit/tests/snapshots/golden_receipts__audit_status_missing_single_field.snap
---
source: crates/fcp-audit/tests/golden_receipts.rs
assertion_line: 350
expression: status
---
{
  "freshness": "missing"
}
