crates/fcp-audit/tests/snapshots/golden_receipts__chain_head_max_signature_quorum.snap
---
source: crates/fcp-audit/tests/golden_receipts.rs
assertion_line: 434
expression: head
---
{
  "zone_id": "z:mesh-prod",
  "head_entry": "entry-max-quorum-0001",
  "head_seq": 1000000,
  "coverage": 1.0,
  "epoch_id": "epoch-max-quorum",
  "signature_count": 16,
  "signatures": [
    {
      "issuer_kid": "kid:signer-00",
      "signature": "00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000"
    },
    {
      "issuer_kid": "kid:signer-01",
      "signature": "01010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101010101"
    },
    {
      "issuer_kid": "kid:signer-02",
      "signature": "02020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202020202"
    },
    {
      "issuer_kid": "kid:signer-03",
      "signature": "03030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303"
    },
    {
      "issuer_kid": "kid:signer-04",
      "signature": "04040404040404040404040404040404040404040404040404040404040404040404040404040404040404040404040404040404040404040404040404040404"
    },
    {
      "issuer_kid": "kid:signer-05",
      "signature": "05050505050505050505050505050505050505050505050505050505050505050505050505050505050505050505050505050505050505050505050505050505"
    },
    {
      "issuer_kid": "kid:signer-06",
      "signature": "06060606060606060606060606060606060606060606060606060606060606060606060606060606060606060606060606060606060606060606060606060606"
    },
    {
      "issuer_kid": "kid:signer-07",
      "signature": "07070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707070707"
    },
    {
      "issuer_kid": "kid:signer-08",
      "signature": "08080808080808080808080808080808080808080808080808080808080808080808080808080808080808080808080808080808080808080808080808080808"
    },
    {
      "issuer_kid": "kid:signer-09",
      "signature": "09090909090909090909090909090909090909090909090909090909090909090909090909090909090909090909090909090909090909090909090909090909"
    },
    {
      "issuer_kid": "kid:signer-10",
      "signature": "0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a0a"
    },
    {
      "issuer_kid": "kid:signer-11",
      "signature": "0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b0b"
    },
    {
      "issuer_kid": "kid:signer-12",
      "signature": "0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c0c"
    },
    {
      "issuer_kid": "kid:signer-13",
      "signature": "0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d0d"
    },
    {
      "issuer_kid": "kid:signer-14",
      "signature": "0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e0e"
    },
    {
      "issuer_kid": "kid:signer-15",
      "signature": "0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f0f"
    }
  ]
}
