crates/fcp-audit/tests/snapshots/golden_receipts__decision_enum_both_variants.snap
---
source: crates/fcp-audit/tests/golden_receipts.rs
expression: "json!({ \"allow\": Decision::Allow, \"deny\": Decision::Deny, })"
---
{
  "allow": "allow",
  "deny": "deny"
}
